--- a/frontend-react/src/components/Register/Register.css
+++ b/frontend-react/src/components/Register/Register.css
@@ -1,1 +1,98 @@
-
+.register-container {
+    max-width: 95%;
+    margin: 40px auto;
+    padding: 40px 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .register-container h2 {
+    text-align: center;
+    color: #007bff;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    width: calc(100% - 30px);
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f8f9fa;
+    color: #333;
+  }
+  
+  .register-button {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .register-button:hover {
+    background-color: #0056b3;
+  }
+  
+  .login-link {
+    text-align: center;
+  }
+  
+  .login-link a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  .login-link a:hover {
+    text-decoration: underline;
+  }
+  
+  
+  @media screen and (min-width: 576px) {
+    .register-container {
+      max-width: 80%;
+      padding: 50px;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .register-container {
+      max-width: 90%;
+      padding: 60px;
+    }
+  }
+  
+  @media screen and (min-width: 992px) {
+    .register-container {
+      max-width: 800px;
+      padding: 80px;
+    }
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      width: calc(100% - 40px);
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .register-container {
+      max-width: 900px;
+      padding: 100px;
+    }
+  }
+  
