--- a/frontend-react/src/components/About/About.css
+++ b/frontend-react/src/components/About/About.css
@@ -11,6 +11,7 @@ body {
 
 .about-us-container {
     max-width: 800px;
+    margin-top: 35px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
