--- a/frontend-react/src/components/Navbar/Navbar.css
+++ b/frontend-react/src/components/Navbar/Navbar.css
@@ -12,8 +12,21 @@
     justify-content: space-between;
     align-items: center;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 1 auto;
     padding: 0 1rem;
+  }
+
+  .after-login{
+    position: absolute;
+    right: 0; 
+    top: 0;
+    display: flex;
+    align-items: center;
+    max-width: 1200px;
+    margin-right: 120px;
+    margin-top: 21.5px;
+    padding: 0 1rem;
+    color: #ffffff; 
   }
 
   .login-item {
